fix some key incorrect

--- a/html/src/localization/en/en.json
+++ b/html/src/localization/en/en.json
@@ -424,7 +424,7 @@
                         "header": "VRChat Quit Fix",
                         "description": "Kill VRChat after exiting game"
                     },
-                    "vrchat_quit_fix": {
+                    "vrchat_osc_fix": {
                         "header": "VRChat OSC Fix",
                         "description": "Kill install process after exiting game"
                     },
