--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -257,7 +257,7 @@
                     "theme_mode_system": "Системная",
                     "theme_mode_light": "Светлая",
                     "theme_mode_dark": "Тёмная",
-                    "theme_mode_darkvanilla": "Dark Vanilla",
+                    "theme_mode_darkvanillaold": "Темная ваниль (старая)",
                     "theme_mode_pink": "Pink",
                     "theme_mode_material3": "Material 3",
                     "zoom": "Зум",
