Update localization strings

--- a/html/src/localization/es/en.json
+++ b/html/src/localization/es/en.json
@@ -266,6 +266,7 @@
                     "theme_mode_light": "Claro",
                     "theme_mode_dark": "Oscuro",
                     "theme_mode_darkvanillaold": "Vainilla Oscura (viejo)",
+                    "theme_mode_darkvanilla": "Vainilla Oscura",
                     "theme_mode_pink": "Rosa",
                     "theme_mode_material3": "Material 3",
                     "zoom": "Zoom",
