--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -258,6 +258,7 @@
                     "theme_mode_light": "浅色",
                     "theme_mode_dark": "深色",
                     "theme_mode_darkvanillaold": "深色香草（旧）",
+                    "theme_mode_darkvanilla": "深色香草",
                     "theme_mode_pink": "粉色",
                     "theme_mode_material3": "Material 3",
                     "vrcplus_profile_icons": "VRC+ 个人信息图标",
