fix: make the description of the osc fix function more accurate

--- a/html/src/localization/en/en.json
+++ b/html/src/localization/en/en.json
@@ -426,7 +426,7 @@
                     },
                     "vrchat_osc_fix": {
                         "header": "VRChat OSC Fix",
-                        "description": "Kill install process after exiting game"
+                        "description": "Resuming and terminating the suspended install.exe process"
                     },
                     "auto_cache_management": {
                         "header": "Automatically Manage Cache When Closing VRChat",
