--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -235,11 +235,11 @@
                     "auto_state_change": "自动化状态切换",
                     "auto_state_change_tooltip": "当房间中有其他人时自动切换状态 (独自一人 / 有其他人时) 如果你不知道这是什么，保持默认关闭即可",
                     "auto_state_change_off": "关闭",
-                    "auto_state_change_active_or_ask_me": "加入我 / 询问我",
+                    "auto_state_change_active_or_ask_me": "欢迎加入 / 忙碌",
                     "auto_state_change_active_or_busy": "在线 / 请勿打扰",
-                    "auto_state_change_join_me_or_ask_me": "加入我 / 请勿打扰",
-                    "auto_state_change_join_me_or_busy": "加入我 / 请勿打扰",
-                    "auto_state_change_ask_me_or_busy": "询问我 / 请勿打扰",
+                    "auto_state_change_join_me_or_ask_me": "欢迎加入 / 请勿打扰",
+                    "auto_state_change_join_me_or_busy": "欢迎加入 / 请勿打扰",
+                    "auto_state_change_ask_me_or_busy": "忙碌 / 请勿打扰",
                     "auto_invite_request_accept": "自动同意邀请请求",
                     "auto_invite_request_accept_tooltip": "自动同意来自星标好友的邀请请求",
                     "auto_invite_request_accept_off": "关闭",
@@ -554,8 +554,8 @@
                 "active": "活跃中",
                 "offline": "离线",
                 "online": "在线",
-                "join_me": "加入我",
-                "ask_me": "询问我",
+                "join_me": "欢迎加入",
+                "ask_me": "忙碌",
                 "busy": "请勿打扰"
             },
             "previous_display_names": "曾使用的显示名称：",
