notification内user_groupの翻訳抜けを修正

--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -1671,7 +1671,7 @@
         "notification": {
             "date": "日付",
             "type": "種類",
-            "user_group": "User/Group",
+            "user_group": "ユーザー/グループ",
             "photo": "画像",
             "message": "メッセージ",
             "action": "アクション"
