note_export/description4のテキストを修正

--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -1191,7 +1191,7 @@
             "description1": "これにより、VRCXのノートが全てVRChatのノートにインポートされます。",
             "description2": "以下の制限にご注意ください:",
             "description3": "- APIエンドポイントにはレート制限があり、リクエストを送る際は間隔を開ける必要があります。",
-            "description4": "- 1ノートあたり256文字の制限があります。",
+            "description4": "- ノート1つにつき256文字の制限があります。",
             "description5": "- 汚い言葉はフィルタリングされます (おふざけは禁止されています) 。",
             "description6": "- 改行はできません。スペースに置き換えられます。",
             "description7": "- 既にノートが設定されているユーザーのノートは上書きされます。",
